Editing Mixamo collada import - Keyframes offset after recording and playing #36122

Closed
opened 2013-07-12 19:03:25 +02:00 by Reiner Prokein · 5 comments

%%%--- Operating System, Graphics card ---

Win 7 64 Bit, Nvidia GTX460

- Blender version with error, and version that worked ---

r58189

- Short description of error ---

Hard to explain. When i record a keyframe and play the animation, and when i then return to this keyframe, then the position is offset. See longer description

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

Load the walking_1.dae. Set scale to 1 and apply rotation. Switch to Pose Mode. Select all bones. Choose whole character in the keying options. Record key. Play. Return to frame 1, which was the key we have recorded the key. The character is twisted now by a small amount.

What i want to achieve here is to import a Mixamo character, and get it to work in Blender. The other issue, that the character has partially lost skinning, is an extra issue. Unfortunately the Mixamo file has no rest pose. That`s what i want to record here. Because when i import the file the first time,and before i hit play, then i have the rest pose that i need.
%%%

%%%--- Operating System, Graphics card --- Win 7 64 Bit, Nvidia GTX460 - Blender version with error, and version that worked --- r58189 - Short description of error --- Hard to explain. When i record a keyframe and play the animation, and when i then return to this keyframe, then the position is offset. See longer description - Steps for others to reproduce the error (preferably based on attached .blend file) --- Load the walking_1.dae. Set scale to 1 and apply rotation. Switch to Pose Mode. Select all bones. Choose whole character in the keying options. Record key. Play. Return to frame 1, which was the key we have recorded the key. The character is twisted now by a small amount. What i want to achieve here is to import a Mixamo character, and get it to work in Blender. The other issue, that the character has partially lost skinning, is an extra issue. Unfortunately the Mixamo file has no rest pose. That`s what i want to record here. Because when i import the file the first time,and before i hit play, then i have the rest pose that i need. %%%
Author

Changed status to: 'Open'

Changed status to: 'Open'
Member

%%%I have taken a look at this issue but i can not see how this refers to Collada.
Maybe the Collada Importer misses to create some necessary data. Or the
animation system has a flaw here.

@Campbell: maybe you can take a look ?

  • go to frame 0 (or any other frame)
  • Select all bones,
  • Reset the bones to restpose
  • key all bones (use locrot)
  • change to another frame
  • step back to frame 0

Now i expect to see the rest pose. But that does not happen. The pose on frame 0 differs from the rest pose. You have any idea why ?%%%

%%%I have taken a look at this issue but i can not see how this refers to Collada. Maybe the Collada Importer misses to create some necessary data. Or the animation system has a flaw here. @Campbell: maybe you can take a look ? - go to frame 0 (or any other frame) - Select all bones, - Reset the bones to restpose - key all bones (use locrot) - change to another frame - step back to frame 0 Now i expect to see the rest pose. But that does not happen. The pose on frame 0 differs from the rest pose. You have any idea why ?%%%
Member

%%%Fixed in revision 58264

The reason for the bad behavior was that the animation for the hip was imported twice.
Thus keying the rest pose did only reset one of the hip animation curve sets.
And thus the restpose was not fully reset.%%%

%%%Fixed in revision 58264 The reason for the bad behavior was that the animation for the hip was imported twice. Thus keying the rest pose did only reset one of the hip animation curve sets. And thus the restpose was not fully reset.%%%
Member

%%%Your reported issue has been fixed in SVN. Thanks for taking the
time to report!.%%%

%%%Your reported issue has been fixed in SVN. Thanks for taking the time to report!.%%%
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#36122
No description provided.