fix: #36122 Collada import - Keyframes offset after recording and playing