source/blender/collada/DocumentImporter.cpp
@@ -311,11 +311,6 @@ void DocumentImporter::translate_anim_recursive(COLLADAFW::Node *node, COLLADAFW
 #endif
 	unsigned int i;
 
-
-	//for (i = 0; i < 4; i++)
-	//    ob =
-	anim_importer.translate_Animations(node, root_map, object_map, FW_object_map);
-
 	if (node->getType() == COLLADAFW::Node::JOINT && par == NULL) {
 		// For Skeletons without root node we have to simulate the
 		// root node here and recursively enter the same function
@@ -323,6 +318,7 @@ void DocumentImporter::translate_anim_recursive(COLLADAFW::Node *node, COLLADAFW
 		translate_anim_recursive(node, node, parob);
 	}
 	else {
+		anim_importer.translate_Animations(node, root_map, object_map, FW_object_map);
 		COLLADAFW::NodePointerArray &children = node->getChildNodes();
 		for (i = 0; i < children.getCount(); i++) {
 			translate_anim_recursive(children[i], node, NULL);
